<resources>
    <string name="app_name">Fruits, Vegetables and Nuts</string>
    <string name="description">Description</string>
    <string name="fruit_name">Fruit Name</string>
    <string name="fruit_image">Fruit Image</string>
    <string name="calories">Calories</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="vitamins">Vitamins</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>