<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="food"
            type="app.web.valiantsoftware.fruitsvegetablesnutsapp.model.Foods" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.FoodDetailFragment">

        <LinearLayout
            android:id="@+id/ivDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:downloadImage="@{food.image}"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDetailFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/boarder"
            android:gravity="center"
            android:hint="@string/name"
            android:text="@{food.name}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDetailLayout"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvDetaiFoodDescription"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:gravity="center"
            android:text="@{food.description}"
            android:hint="@string/description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailFoodName"
            tools:ignore="TextContrastCheck"
            android:background="@drawable/boarder"/>

        <TextView
            android:id="@+id/tvDetaiFoodCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{food.calories}"
            android:hint="@string/calories"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetaiFoodDescription"
            tools:ignore="TextContrastCheck"
            android:background="@drawable/boarder"/>

        <TextView
            android:id="@+id/tvDetaiFoodCarbohydrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{food.carbohydrate}"
            android:hint="@string/carbohydrate"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetaiFoodCalories"
            tools:ignore="TextContrastCheck"
            android:background="@drawable/boarder"/>

        <TextView
            android:id="@+id/tvDetaiFoodProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{food.protein}"
            android:hint="@string/protein"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetaiFoodCarbohydrate"
            tools:ignore="TextContrastCheck"
            android:background="@drawable/boarder"/>

        <TextView
            android:id="@+id/tvDetaiFoodFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{food.fat}"
            android:hint="@string/fat"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetaiFoodProtein"
            tools:ignore="TextContrastCheck"
            android:background="@drawable/boarder"/>

        <TextView
            android:id="@+id/tvDetaiFoodVitamins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/vitamins"
            android:text="@{food.vitamins}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetaiFoodFat"
            tools:ignore="TextContrastCheck"
            android:background="@drawable/boarder"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>