<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="food"
            type="app.web.valiantsoftware.fruitsvegetablesnutsapp.model.Foods" />
        <variable
            name="adapter"
            type="app.web.valiantsoftware.fruitsvegetablesnutsapp.adapter.FruitRecyclerAdapter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:onClick="@{() -> adapter.gotoFruitDetail(cvFood,food.uuid)}">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/boarder"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/ivLayout"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivCardFood"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image"
                        android:downloadImage="@{food.image}"
                        app:srcCompat="@drawable/ic_launcher_background" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tvCardFoodName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/boarder"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@{food.name}"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:hint="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivLayout"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvCardFoodDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/boarder"
                    android:padding="4dp"
                    android:text="@{food.description}"
                    android:hint="@string/description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivLayout"
                    app:layout_constraintTop_toBottomOf="@+id/tvCardFoodName" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>